overview: fix account outer edges background overflow
After bumping MaterializeCSS to version 1.1.0 (commit da8f1d2), the remove of `overflow: hidden;` was necessary to make right-click menu working again. This also leads to overflown background colors over the rounded corners. This should be fixed

--- a/src/moneywatch/static/materialize.custom.css
+++ b/src/moneywatch/static/materialize.custom.css
@@ -378,6 +378,7 @@ div.account_item table.account_detail td.balance {
     font-size: 1.5em;
     background-color: rgba(0,0,0,0.06);
     border-left: 1px solid #aaaaaa;
+    border-radius: 0em 0.5em 0.5em 0em;
 }
 
 div.account_item table.account_detail td.name {
@@ -407,6 +408,7 @@ div.account_item  table.account_detail td.id {
     border-right: 1px solid #aaaaaa;
     white-space:nowrap;
     vertical-align:top;
+    border-radius: 0.5em 0em 0em 0.5em;
 }
 
 
